Fixing layout shift.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,6 +113,8 @@ header > section > section > a:focus {
 }
 
 #menu-toggle {
+    width: fit-content;
+    height: fit-content;
     display: none;
 }
 
